"use strict";

/** An exception that is thrown when we try to access to a region that does not exist. */
class FileException extends Error {}

module.exports = { FileException };