@startuml
'https://plantuml.com/class-diagram

package "Core"{

    'classes and interfaces
    interface ICloudClient{
        +constructor(cloudRegion: string, logPath: string)
        +readParam(path: string, target: object): object
        +log(message: string, type: enum): void
        +exists(type: enum, name: string): boolean
    }

    class AwsCloudClientImpl {
        -cloudResource: string
        -accountId: string
        -logPath: string
        +connection: aws.ec2
        {static} +resouceType: enum

        {static} +initialize(cloudRegion: string, logPath: string, accountId: string): AwsCloudClientImpl
        +regionExists(region: string): boolean
        -vpcExists(name: string): boolean
        -instanceExists(name: string): boolean
        -imageExists(name: string): boolean
        -keypairExists(name: string): boolean
        -budgetExists(name: string): boolean
        -subnetExists(name: string): boolean
        -internetGatewayExists(name: string): boolean
        -snapshotExists(name: string): boolean
    }

    class Logger {
        {static} +messageType: enum

        {static} -setupLogger(path: string): void
        {static} -log(message: type: enum, string, path: string): void
        {static} +info(message: string, path: string): void
        {static} +error(message: string, path: string): void
    }

    class Error
    class FileException
    class FileCreationPermissionDeniedException
    class RegionNotFoundException

    'relations
    Error <|-- RegionNotFoundException
    Error <|-- FileException
    FileException <|-- FileCreationPermissionDeniedException

    RegionNotFoundException <.. AwsCloudClientImpl: throws
    FileCreationPermissionDeniedException <.. Logger: throws

    ICloudClient <|.. AwsCloudClientImpl
    Logger <.. AwsCloudClientImpl
}

@enduml